labs/day03/virtual-service-reviews-delay.yaml
# virtual-service-reviews-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - fault:
        delay:
          percentage:
            value: 60.0
          fixedDelay: 5s
      route:
        - destination:
            host: reviews
            subset: v1
