labs/day03/virtual-service-reviews-retries.yaml
# virtual-service-reviews-retries.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v1
      retries:
        attempts: 3
        perTryTimeout: 1s
        # retryOn: gateway-error,connect-failure,refused-stream
